<resources>
    <!-- Top-level activity strings -->
    <string name="app_name">Wireless LED Matrix</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_main_nav">Wireless LED Matrix</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_ble_connection">Connect to a Device</string>
    <string name="title_fragment_ble_status">Status</string>
    <string name="title_fragment_ble_control">Manual Control</string>

    <!-- connection page -->
    <string name="unknown_device">Unknown Device</string>
    <string name="scan_button_text">Scan for Devices</string>

    <!-- Navigation drawer titles -->
    <string name="status">Status</string>
    <string name="manual_control">Manual Control</string>
    <string name="configuration">Configuration</string>
    <string name="connections">Connections</string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_device_name">No Device Name Found</string>
    <string name="no_device_address">Address Unavailable</string>
    <string name="no_device_rssi">N/A mDb</string>

    <string name="device_connecting">Connecting...</string>
    <string name="device_connected">Connected</string>
    <string name="device_disconnected">Disconnected</string>

    <!-- Strings for preferences -->
    <string name="pref_enable">Automatically Push Status</string>
    <string name="pref_enable_summ">Automatically push the phone status to the LED matrix</string>
    <string name="pref_recycleconnection">Recycle Connections</string>
    <string name="pref_recycleconnection_summ">Reuse existing Bluetooth connections</string>
    <string name="pref_forcecloseconnection">Close Connection</string>
    <string name="pref_forcecloseconnection_summ">Force close connection before new connect</string>
    <string name="pref_gattautoconnect">Reconnect</string>
    <string name="pref_gattautoconnect_summ">Try to reconnect when the connection to a device fails</string>

</resources>
